Fixed text position on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,6 +54,7 @@
 
   .home-page-text {
     width: 70vw;
+    top: 20vh;
   }
 
   .page-content {
